<resources>
    <string name="app_name_full">(Smartphone Interfaced Device For Launching Coins)</string>
    <string name="app_name">SIDFLC</string>
    <string name="dfu_name">SIDFLC_DFU</string>
    <string name="notice">notice</string>
    <string name="PREFERENCE_FILTER_DEVICE_MODEL_ID">device_model_id</string>
    <string name="PREFERENCE_FILTER_UNITS_EDIT">units_edit</string>
    <string name="PREFERENCE_FILTER_SENSOR_CAL_PHONE">gyro_calibration</string>
    <string name="PREFERENCE_FILTER_SENSOR_CAL_DEVICE">device_sensor_calibration</string>
    <string name="PREFERENCE_FILTER_DEVICE_SETTINGS">device_settings</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_EDIT">projectile_edit</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_NAMES">projectile_names</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_WEIGHTS">projectile_weights</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_DIAMETERS">projectile_diameters</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_DRAGS">projectile_drags</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_SELECTED_DRAG">projectile_selected_drag</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_SELECTED">projectile_selected</string>
    <string name="PREFERENCE_FILTER_PROJECTILE_SELECTED_BALLISTICS">projectile_selected_ballistic</string>
    <string name="PREFERENCE_FILTER_SPRING_SELECTED">spring_selected</string>
    <string name="PREFERENCE_FILTER_LENS_OFFSET">lens_offset</string>
    <string name="PREFERENCE_FILTER_DEVICE_OFFSET">device_offset</string>
    <string name="PREFERENCE_FILTER_FORCE_OFFSET">force_offset</string>
    <string name="PREFERENCE_FILTER_EFFICIENCY">efficiency</string>
    <string name="PREFERENCE_FILTER_FRICTION_COEFFICIENT">friction_coefficient</string>
    <string name="PREFERENCE_FILTER_CARRIAGE_POSITION_MODE">carriage_pos_mode</string>
    <string name="PREFERENCE_FILTER_ENGINEERING_VIEW">engineering_view</string>
    <string name="PREFERENCE_FILTER_TEST_PITCH">test_pitch</string>
    <string name="PREFERENCE_FILTER_TEST_HEIGHT">test_height</string>
    <string name="PREFERENCE_FILTER_RECORDED_DATA_VALUES">recorded_data_values</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="fab_projectile_description">add_new_projectile</string>
    <string name="unknown_projectile">Projectile</string>
    <string name="unit_range">ft</string>
    <string name="deviceInfo">…</string>
    <string name="value_unknown">…</string>
    <string name="value">value</string>
    <string name="loading_configs">Loading Configurations…</string>
    <string name="device_info_desc_name">Name: </string>
    <string name="device_info_desc_address">Address: </string>
    <string name="device_info_desc_make">Maker:</string>
    <string name="device_info_desc_serial">Serial:</string>
    <string name="device_info_desc_model">Model:</string>
    <string name="device_info_desc_hw">Hardware:</string>
    <string name="device_info_desc_fw">Firmware:</string>
    <string name="device_info_desc_sw">Software:</string>
    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>This Device</b> will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>
    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>
    <string name="connected_device_info">CONNECTED DEVICE</string>
    <string name="blinky_guide_title">CAN\'T SEE YOUR DEVICE?</string>
    <string name="blinky_guide_info">Make sure the device is <b>turned on.</b></string>
    <string name="blinky_guide_location_info">Some Android phones require location to be enabled in order to scan for Bluetooth LE devices. Click the button below to open location settings.\n\nOnce a successful connection is made, consecutive connections will be automatic and location is not required.</string>
    <string name="blinky_guide_location_action">Enable</string>
    <string name="button_device_info">Info</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_update">Update</string>
    <string name="button_calibrate">Calibrate</string>
    <string name="button_calibrate_sensor_1">Cal Sensor 1</string>
    <string name="button_calibrate_sensor_2">Cal Sensor 2</string>
    <string name="button_sensor_tuner">Sensor Tuner</string>
    <string name="button_ballistics">Ballistics</string>
    <string name="button_home">Home</string>
    <string name="button_ok">OK</string>
    <string name="button_pop_out">Pop Out</string>
    <string name="button_continue">Continue</string>
    <string name="button_restart">Restart</string>
    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">1. The device service does not match what is required for the app.
		\n2. Make sure the device is loaded with the correct firmware.
		\n3. If the device has an older firmware, the old services might have been cached by the system.</string>
    <string name="not_supported_action">Fix and try again</string>
    <string name="nav_header_subtitle">Spare some change?  </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_device">Device</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings_projectile_edit">Reset</string>
    <string name="header_display">Display</string>
    <string name="header_projectile">Projectile</string>
    <string name="header_projectiles_editor">Projectiles</string>
    <string name="header_spring">Spring</string>
    <string name="header_height">Height</string>
    <string name="header_device">Device</string>
    <string name="header_device_internal">Device Internal</string>
    <string name="header_device_external">Device External</string>
    <string name="header_hardware">Hardware</string>
    <string name="header_ballistics">Ballistics</string>
    <string name="header_calibrations">Calibrations</string>
    <string name="header_orientation">Orientation</string>
    <string name="header_hardware_summary">*Stored in device</string>
    <string name="header_ballistics_summary">*Stored in device</string>
    <string name="pref_title_edit_units">Units</string>
    <string name="pref_title_projectile_edit">Projectile</string>
    <string name="pref_title_projectiles_edit">Projectiles</string>
    <string name="pref_title_projectile_selected_drag">Projectile Drag</string>
    <string name="pref_title_device">Device</string>
    <string name="pref_title_spring_edit">*Spring</string>
    <string name="pref_title_lens_offset">Lens Offset</string>
    <string name="pref_title_device_offset">Device Offset</string>
    <string name="pref_title_force_offset">*Force Offset (N)</string>
    <string name="pref_title_efficiency">*Efficiency Factor</string>
    <string name="pref_title_friction_coefficient">*Friction Coefficient</string>
    <string name="pref_title_calibrate_gyro">Gyro</string>
    <string name="pref_title_calibrate_sensors">Device</string>
    <string name="pref_title_advanced">Device Configurations</string>
    <string name="pref_title_height">Height</string>
    <string name="pref_title_pitch">Pitch</string>
    <string name="height_config_title">Acquisition</string>
    <string name="attachment_title">Auto Adjust</string>
    <string name="attachment_summary_on">Enabled</string>
    <string name="attachment_summary_off">Disabled</string>
    <string name="get_height_method_on">Manual entry</string>
    <string name="get_height_method_off">Acquired from range sensor</string>
    <string name="manual_height_input_title">Set Height</string>
    <string name="projectile_input_title">Set Projectile</string>
    <string name="config_input_title">Set Config</string>
    <string name="data_point_input_title">Set Data Point</string>
    <string name="title_settings">Settings</string>
    <string name="title_home"> </string>
    <string name="title_about">About</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_projectile_edit">Projectiles</string>
    <string name="state_initializing">Device Initializing…</string>
    <string name="state_connecting">Device Connecting…</string>
    <string name="state_connected">Device Connected</string>
    <string name="state_disconnecting">Device Disconnecting…</string>
    <string name="state_disconnected">No device connected</string>
    <string name="calibration_procedure">Leave the carriage in the default position and place a flat object against the rear sensor.\n\nPress the Calibrate button when ready.</string>
    <string name="calibration_options">Long press the image to toggle options.</string>
    <string name="key_lens_offset">lens_offset</string>
    <string name="key_device_offset">device_offset</string>
    <string name="key_phone_height">phone_height</string>
    <string name="key_target_height">target_height</string>
    <string name="key_target_distance">target_distance</string>
    <string name="key_sensor_short_offset">sensor_short_offset</string>
    <string name="key_sensor_long_offset">sensor_long_offset</string>
    <string name="key_carriage_position">sensor_carriage_position</string>
    <string name="key_carriage_positionOverride">sensor_carriage_position_override</string>
    <string name="header_description">Description</string>
    <string name="header_unit">Unit</string>
    <string name="item_lens_offset">Lens Offset</string>
    <string name="item_device_offset">Device Offset</string>
    <string name="item_phone_height">Phone Height (PH)</string>
    <string name="item_target_distance">Target Distance (TD)</string>
    <string name="item_target_height">Target Height (TH)</string>
    <string name="item_carriage_position">Carriage Position</string>
    <string name="about_app">This app calculates the probability of hitting a target with a projectile.
    </string>
    <string name="privacy_policy">Personal information is not used or recorded.</string>
    <string name="gyro_cal_instructions">Place phone on a flat <b>level</b> surface.
        \nPress the <b>Calibrate</b> button to zero out the sensors.</string>
    <string name="fw_file_version">https://raw.githubusercontent.com/ElectronicSpaceCat/sidflc-fw-app/main/extra/dfu/version</string>
    <string name="fw_file_download">https://github.com/ElectronicSpaceCat/sidflc-fw-app/raw/main/extra/dfu/sidflc.zip</string>
    <string name="fw_file_name">plink.zip</string>
    <string name="dfu_location_enable_info_title">LOCATION REQUIRED</string>
    <string name="dfu_location_permissions_info_title">CONNECTED DEVICE</string>
    <string name="dfu_location_permissions_info">CONNECTED DEVICE</string>
    <string name="sensors_available_title">Required Sensors</string>
    <string name="sensors_available_prompt">One or more of the sensors required for the gyroscope are missing. The app will operate with limited functionality.</string>
    <string name="sensor_accel">Accelerometer</string>
    <string name="sensor_mag">Magnetometer</string>
    <string name="low_batt_prompt">Device shutdown due to very low battery.\n\nCharging required.</string>
</resources>