<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="visible"
    tools:visibility="visible">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_display">
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/PREFERENCE_FILTER_UNITS_EDIT"
            app:persistent="false"
            app:title="@string/pref_title_edit_units"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@layout/widget_open_window" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:summary="(offsets start from base of phone)"
        app:title="@string/header_orientation">

        <EditTextPreference
            app:defaultValue="0.0"
            app:iconSpaceReserved="false"
            app:key="@string/PREFERENCE_FILTER_LENS_OFFSET"
            app:persistent="false"
            app:title="@string/pref_title_lens_offset"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0.0"
            app:iconSpaceReserved="false"
            app:key="@string/PREFERENCE_FILTER_DEVICE_OFFSET"
            app:persistent="false"
            app:title="@string/pref_title_device_offset"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_ballistics">
        <Preference
            android:id="@+id/preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconSpaceReserved="false"
            app:key="@string/PREFERENCE_FILTER_PROJECTILE_EDIT"
            app:persistent="false"
            app:title="@string/pref_title_projectiles_edit"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@layout/widget_open_window" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/PREFERENCE_FILTER_DEVICE_SETTINGS"
            app:persistent="false"
            app:title="@string/pref_title_device"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@layout/widget_open_window" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_calibrations">
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/PREFERENCE_FILTER_SENSOR_CAL_PHONE"
            app:persistent="false"
            app:title="@string/pref_title_calibrate_gyro"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@layout/widget_open_window" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/PREFERENCE_FILTER_SENSOR_CAL_DEVICE"
            app:persistent="false"
            app:title="@string/pref_title_calibrate_sensors"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@layout/widget_open_window" />

    </PreferenceCategory>

</PreferenceScreen>
